# datalad-usage-dashboard

./: .pre-commit-config.yaml  CLAUDE.md  INSTALLATION.md  README.md  datalad-repos.json  find-datalad-repos.py  find-datalad-users.py  github-orgs.json  mypy.ini  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  test_basic_functionality.py  tox.ini
.github/workflows/: test.yml  update-gin.yml  update.yml
READMEs/: 1104HARI.md  2lambda123.md  62442katieb.md  AKSoo.md  AliasXoX.md  AllenInstitute.md  Alterau.md  Aswendt-Lab.md  BetterCodeBetterScience.md  CCC-members.md  CONP-PCNO.md  Community-Maintenance.md  ContextLab.md  DVS-Lab.md  DigitalCarleton.md  Donders-Institute-Data.md  Donders-Institute.md  ESiWACE-S1.md  EditorZZ.md  EssadikElmangoug.md  FNNDSC.md  FabienLelaquais.md  Fusefy.md  GadiyamulaHarshavardhan.md  GitThuongVN.md  HEALTHCHASE.md  Hobbeist.md  HugoDelhaye.md  IBT-FMI.md  ImagingDataCommons.md  IndikaAI.md  InfiniteJas.md  InsightSoftwareConsortium.md  JEONJIHO817.md  JGuetschow.md  JacMatu.md  Jaydenha09.md  JujiaoKang.md  LAAC-LSCP.md  LCK0527.md  (+233 more)
READMEs/atris/: CAIRT.md  MeteoCloud.md  g.guenther.md  m.risse.md
READMEs/gin/: AIDAqc_datasets.md  Aswendt_Lab.md  CREAM.md  CatalystNeuro.md  Edoardo96.md  EdoardoBettazzi.md  HashimSatti.md  InsightSoftwareConsortium.md  LAAC-LSCP.md  Las-Ninas.md  PRESTUS.md  RemiGau.md  cmo.md  (+55 more)
adhoc_tests/: test_basic_functionality.py  test_github_enumeration.py  test_github_fallback.py  test_openneuro_ds005357.py  test_org_search.py
doc/: implementation-plan-gh-62-fallback.md
find_datalad_repos/: __main__.py  addids.py  config.py  core.py  diff.py  gin.py  github.py  osf.py  readmes.py  record.py  tables.py  util.py
(+26 files in other folders)
