[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "find-datalad-repos"
version = "0.0.0"
#description = ???
#readme = "README.md"
requires-python = ">= 3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "John T. Wodder II", email = "find-datalad-repos@varonathe.org" }
]

classifiers = [
    "Private :: Keep Off PyPI",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]

dependencies = [
    "click >= 8.0.1",
    "click-loglevel ~= 0.2",
    "ghtoken ~= 0.1",
    "ghreq ~= 0.3",
    "pydantic ~= 2.0",
    "requests ~= 2.20",
]

[project.scripts]
find-datalad-repos = "find_datalad_repos.__main__:main"
diff-datalad-repos = "find_datalad_repos.diff:main"

[project.urls]
"Source Code" = "https://github.com/datalad/datalad-usage-dashboard"
"Bug Tracker" = "https://github.com/datalad/datalad-usage-dashboard/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/docs",
    "/src",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "tox.ini",
]

[tool.mypy]
allow_incomplete_defs = false
allow_untyped_defs = false
ignore_missing_imports = false
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = true
implicit_reexport = false
local_partial_types = true
pretty = true
show_error_codes = true
show_traceback = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
warn_required_dynamic_aliases = true
